fix: user name cut off with emoji and state icon (#2138)

--- a/app/style/list/list.less
+++ b/app/style/list/list.less
@@ -58,7 +58,7 @@
 
   .availability-state-label {
     .label-bold-xs();
-    height: 12px;
+    line-height: 12px;
     display: inline-block;
     max-width: @left-width - 58px;
   }
